--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,6 +1,6 @@
 #container {
   text-align: center;
-
+  padding-bottom: 10px;
   position: absolute;
   left: 0;
   right: 0;
@@ -24,4 +24,36 @@
 
 #container a {
   text-decoration: none;
+}
+
+.strong-1 {
+  font-size: 30px;
+}
+
+.button-1 {
+ 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#texto01 {
+  
+ 
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.logo {
+  max-width: 40%;
+  padding: 10px;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  margin: auto;
+}
+
+ion-icon {
+  color: red;
 }
