--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,32 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <ion-content >
+
+  <div class="logo">
+    <ion-img src="../../assets/logos/logo.jpeg"></ion-img>
   </div>
+
+  <div id="texto01">
+    <h1 class="strong-1">Condomínio do Edifício <br> Alfa Quality</h1>
+    <br>
+    <hr>
+  </div>
+
+  <div class="button-1">
+    <ion-button  color="dark" href="/login">Entrar</ion-button>
+  </div>
+
 </ion-content>
+
+
+
+
+
+  
+
