--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-
+  
 </ion-content>
 
 <ion-footer>
@@ -13,18 +13,18 @@
     <ion-tabs>
       <ion-tab-bar slot="bottom">
         
-        <ion-tab-button tab="administracao">
-          <ion-icon name="triangle"></ion-icon>
+        <ion-tab-button [routerLink]="['/administracao']">
+          <ion-icon name="calendar" aria-hidden="true"></ion-icon>
           <ion-label>Administração</ion-label>
         </ion-tab-button>
 
-        <ion-tab-button tab="manutencao">
-          <ion-icon name="ellipse"></ion-icon>
+        <ion-tab-button [routerLink]="['/manutencao']">
+          <ion-icon name="construct"></ion-icon>
           <ion-label>Manutenção</ion-label>
         </ion-tab-button>
 
-        <ion-tab-button tab="funcionarios">
-          <ion-icon name="square"></ion-icon>
+        <ion-tab-button [routerLink]="['/funcionarios']">
+          <ion-icon name="person-circle" aria-hidden="true"></ion-icon>
           <ion-label>Funcionários</ion-label>
         </ion-tab-button>
 
@@ -33,3 +33,4 @@
     </ion-tabs>
   </ion-toolbar>
 </ion-footer>
+
