--- a/src/app/pages/administracao/administracao.page.html
+++ b/src/app/pages/administracao/administracao.page.html
@@ -1,11 +1,61 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Administração</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Administração</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-list>
 
+        <ion-list-header>
+          <ion-label>Solicitação</ion-label>
+        </ion-list-header>
+        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="checkbox"></ion-icon>
+            <ion-label>Atualização <br>de Cadastro</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="build"></ion-icon>
+            <ion-label>Comunicação <br>de Obra</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="logo-usd"></ion-icon>
+            <ion-label>Boletos</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="bookmarks"></ion-icon>
+            <ion-label>Reservas de Espaços</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        
+
+        <ion-list-header>
+          <ion-label>Conta</ion-label>
+        </ion-list-header>
+        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['/home']">
+            <ion-icon slot="start"  name="power"></ion-icon>
+            <ion-label>Sair</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <div class="ion-page" id="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Administração</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <h3>Insira o Conteudo aqui.</h3>
+    </ion-content>
+  </div>
 </ion-content>
 
 <ion-footer>
@@ -19,7 +69,7 @@
         </ion-tab-button>
 
         <ion-tab-button [routerLink]="['/manutencao']">
-          <ion-icon name="construct"></ion-icon>
+          <ion-icon name="construct" aria-hidden="true"></ion-icon>
           <ion-label>Manutenção</ion-label>
         </ion-tab-button>
 
