--- a/src/app/pages/funcionarios/funcionarios.page.html
+++ b/src/app/pages/funcionarios/funcionarios.page.html
@@ -1,12 +1,63 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Funcionários</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Funcionários</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-list>
 
+        <ion-list-header>
+          <ion-label>Solicitação</ion-label>
+        </ion-list-header>
+        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['/funcionario']">
+            <ion-icon slot="start"  name="folder-open"></ion-icon>
+            <ion-label>Cadastro de <br>Funcionários</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="clipboard"></ion-icon>
+            <ion-label>Escala de Serviço</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="bookmarks"></ion-icon>
+            <ion-label>Contato do <br>Funcionário</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="checkbox"></ion-icon>
+            <ion-label>Avaliar Funcionário</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        
+
+        <ion-list-header>
+          <ion-label>Conta</ion-label>
+        </ion-list-header>
+        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['/home']">
+            <ion-icon slot="start"  name="power"></ion-icon>
+            <ion-label>Sair</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <div class="ion-page" id="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Funcionários</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <h3>Insira o Conteudo aqui.</h3>
+    </ion-content>
+  </div>
 </ion-content>
+
 
 <ion-footer>
   <ion-toolbar color="primary">
