--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,16 +1,68 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Inicio</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Inicio</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-list>
+
+        <ion-list-header>
+          <ion-label>Condomínio</ion-label>
+        </ion-list-header>
+        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="logo-buffer"></ion-icon>
+            <ion-label>Apartamento</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="browsers"></ion-icon>
+            <ion-label>Comunicados</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="logo-usd"></ion-icon>
+            <ion-label>Financeiro</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="bookmarks"></ion-icon>
+            <ion-label>Reservas</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        
+
+        <ion-list-header>
+          <ion-label>Conta</ion-label>
+        </ion-list-header>
+        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['/home']">
+            <ion-icon slot="start"  name="power"></ion-icon>
+            <ion-label>Sair</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <div class="ion-page" id="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Inicio</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <h3>Insira o Conteudo aqui.</h3>
+    </ion-content>
+  </div>
 </ion-content>
 
 <ion-footer>
   <ion-toolbar color="primary">
     <ion-tabs>
+
       <ion-tab-bar slot="bottom">
         
         <ion-tab-button [routerLink]="['/administracao']">
@@ -19,7 +71,7 @@
         </ion-tab-button>
 
         <ion-tab-button [routerLink]="['/manutencao']">
-          <ion-icon name="construct"></ion-icon>
+          <ion-icon name="construct" aria-hidden="true"></ion-icon>
           <ion-label>Manutenção</ion-label>
         </ion-tab-button>
 
