--- a/src/app/pages/manutencao/manutencao.page.html
+++ b/src/app/pages/manutencao/manutencao.page.html
@@ -1,11 +1,65 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>Manutenção</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+  <ion-menu contentId="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title>Manutenção</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <ion-list>
 
+        <ion-list-header>
+          <ion-label>Solicitação</ion-label>
+        </ion-list-header>
+        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="checkbox"></ion-icon>
+            <ion-label>Agendamento <br>de Visita</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="build"></ion-icon>
+            <ion-label>Visitas Técnicas</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="logo-usd"></ion-icon>
+            <ion-label>Boletos</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="clipboard"></ion-icon>
+            <ion-label>Ordem de Serviço</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="bookmarks"></ion-icon>
+            <ion-label>Histórico <br>de Agendamento</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        
+
+        <ion-list-header>
+          <ion-label>Conta</ion-label>
+        </ion-list-header>
+        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['/home']">
+            <ion-icon slot="start"  name="power"></ion-icon>
+            <ion-label>Sair</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <div class="ion-page" id="main-content">
+    <ion-header>
+      <ion-toolbar>
+        <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+        </ion-buttons>
+        <ion-title>Manutenção</ion-title>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+      <h3>Insira o Conteudo aqui.</h3>
+    </ion-content>
+  </div>
 </ion-content>
 
 
