--- a/src/app/pages/inicio/inicio.page.html
+++ b/src/app/pages/inicio/inicio.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-menu contentId="main-content">
+  <div class="ion-page" id="main-content">
     <ion-header>
       <ion-toolbar>
         <ion-title>Inicio</ion-title>
@@ -7,11 +7,9 @@
     </ion-header>
     <ion-content class="ion-padding">
       <ion-list>
-
         <ion-list-header>
           <ion-label>Condomínio</ion-label>
         </ion-list-header>
-        <ion-menu-toggle autoHide="false">
           <ion-item [routerLink]="['']">
             <ion-icon slot="start"  name="logo-buffer"></ion-icon>
             <ion-label>Apartamento</ion-label>
@@ -28,33 +26,22 @@
             <ion-icon slot="start"  name="bookmarks"></ion-icon>
             <ion-label>Reservas</ion-label>
           </ion-item>
-        </ion-menu-toggle>
-        
-
         <ion-list-header>
           <ion-label>Conta</ion-label>
         </ion-list-header>
-        <ion-menu-toggle autoHide="false">
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="person"></ion-icon>
+            <ion-label>Perfil</ion-label>
+          </ion-item>
+          <ion-item [routerLink]="['']">
+            <ion-icon slot="start"  name="settings"></ion-icon>
+            <ion-label>Configurações</ion-label>
+          </ion-item>
           <ion-item [routerLink]="['/home']">
             <ion-icon slot="start"  name="power"></ion-icon>
             <ion-label>Sair</ion-label>
           </ion-item>
-        </ion-menu-toggle>
-
       </ion-list>
-    </ion-content>
-  </ion-menu>
-  <div class="ion-page" id="main-content">
-    <ion-header>
-      <ion-toolbar>
-        <ion-buttons slot="start">
-          <ion-menu-button></ion-menu-button>
-        </ion-buttons>
-        <ion-title>Inicio</ion-title>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding">
-      <h3>Insira o Conteudo aqui.</h3>
     </ion-content>
   </div>
 </ion-content>
@@ -62,26 +49,20 @@
 <ion-footer>
   <ion-toolbar color="primary">
     <ion-tabs>
-
       <ion-tab-bar slot="bottom">
-        
         <ion-tab-button [routerLink]="['/administracao']">
           <ion-icon name="calendar" aria-hidden="true"></ion-icon>
           <ion-label>Administração</ion-label>
         </ion-tab-button>
-
         <ion-tab-button [routerLink]="['/manutencao']">
           <ion-icon name="construct" aria-hidden="true"></ion-icon>
           <ion-label>Manutenção</ion-label>
         </ion-tab-button>
-
         <ion-tab-button [routerLink]="['/funcionarios']">
           <ion-icon name="person-circle" aria-hidden="true"></ion-icon>
           <ion-label>Funcionários</ion-label>
         </ion-tab-button>
-
       </ion-tab-bar>
-
     </ion-tabs>
   </ion-toolbar>
 </ion-footer>
